[gd_scene load_steps=10 format=3 uid="uid://xd3rcm8ucvdy"]

[ext_resource type="PackedScene" uid="uid://ca275lxbdms00" path="res://scenes/animation/GirlLixoBody.tscn" id="1"]
[ext_resource type="Script" uid="uid://bat3s112ffatf" path="res://scenes/stages/npc/PessoaLixoInterativo.gd" id="2"]
[ext_resource type="FontFile" path="res://assets/Font/text.tres" id="3"]
[ext_resource type="PackedScene" uid="uid://bl0q7nvmwd2p2" path="res://scenes/animation/Mosquinhas.tscn" id="4"]
[ext_resource type="PackedScene" path="res://scenes/stages/npc/IndicadorCabecas.tscn" id="5"]
[ext_resource type="Shader" uid="uid://b0cn5hhxmsycw" path="res://scenes/animation/shader_trocar_cores.gdshader" id="6"]

[sub_resource type="ShaderMaterial" id="1"]
resource_local_to_scene = true
shader = ExtResource("6")
shader_parameter/old_color = Color(0.219608, 0.219608, 0.933333, 1)
shader_parameter/new_color = Color(0, 0.831373, 0.662745, 1)

[sub_resource type="ShaderMaterial" id="2"]
resource_local_to_scene = true
shader = ExtResource("6")
shader_parameter/old_color = Color(0, 0.564706, 0.0745098, 1)
shader_parameter/new_color = Color(0.0901961, 0.0901961, 0.0901961, 1)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(128.51, 70.0222)

[node name="GirlLixoInterativo" type="Node2D"]
script = ExtResource("2")
person_type = "girl"
color_hair_array = [Color(0.25098, 0.227451, 0.227451, 1), Color(0.576471, 0.286275, 0.0745098, 1), Color(0.341176, 0.286275, 0.211765, 1), Color(1, 0.898039, 0.223529, 1), Color(0.839216, 0.341176, 0.0431373, 1)]
color_shirt_array = [Color(0.619608, 1, 0.27451, 1), Color(0.101961, 0.564706, 0.0627451, 1), Color(0.94902, 0.364706, 1, 1), Color(1, 0.694118, 0.258824, 1), Color(1, 0.32549, 0.32549, 1), Color(1, 0.901961, 0.254902, 1), Color(0, 0.396078, 0.686275, 1)]
person = NodePath("GirlBody")
body_anim_player = NodePath("GirlBody/Corpo/PersonAnimationPlayer")
moscas_anim_player = NodePath("Mosquinhas/AnimationPlayer")

[node name="GirlBody" parent="." instance=ExtResource("1")]
material = SubResource("1")

[node name="Cabe√ßa" parent="GirlBody/Corpo" index="0"]
material = SubResource("2")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("3")

[node name="Timer_Anim_Vermelho" type="Timer" parent="."]

[node name="Timer_Anim_Verde" type="Timer" parent="."]

[node name="Number" type="Label" parent="."]
visible = false
offset_left = -48.0
offset_top = -31.0
offset_right = -8.0
offset_bottom = 3.0
theme_override_fonts/font = ExtResource("3")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 1
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mosquinhas" parent="." instance=ExtResource("4")]
visible = false

[node name="IndicadorCabecas" parent="." instance=ExtResource("5")]
offset_left = -8.0
offset_top = -80.0
offset_right = 40.0
offset_bottom = -52.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer_Anim_Vermelho" to="." method="_on_Timer_Anim_Vermelho_timeout"]
[connection signal="timeout" from="Timer_Anim_Verde" to="." method="_on_Timer_Anim_Verde_timeout"]

[editable path="GirlBody"]
[editable path="Mosquinhas"]
